add background image shift login box location to float right add footer edit template and admin template to fix footer to bottom

--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -6,37 +6,64 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">    
 
     <ui:composition template="templates/template.xhtml">
         <ui:param name="pageName" value="Index" />
 
-        <!-- Override Content -->
-        <ui:define name="content">
-            <h:form>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h2>Login</h2>
-                            <div class="input-group form-control-spacing">
-                                <div class="input-group-addon input-addon-fixedwidth">Username</div>
-                                <h:inputText id="usernameInput" value="#{loginBean.username}" styleClass="form-control" pt:placeholder="Enter your username">
-                                    <f:validateLength minimum="4" maximum="32" />
-                                </h:inputText>
-                                <h:message styleClass="errorMsg" for="usernameInput" />
-                            </div>
+        <!-- Imports -->
+        <ui:define name="more-imports">
+            <ui:insert>
+                <link rel="stylesheet" href="${request.contextPath}/css/login.css" type="text/css" />
+            </ui:insert>
+        </ui:define>
 
-                            <div class="input-group form-control-spacing">
-                                <div class="input-group-addon input-addon-fixedwidth">Password</div>
-                                <h:inputSecret id="passwordInput" value="#{loginBean.password}" styleClass="form-control" pt:placeholder="Enter your password" />
-                            </div>
-                            <h:link value="Forget your password?" outcome="/resetpassword.xhtml" />
-                            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
-                            <p:commandButton value="Login" id="ajax" actionListener="#{loginBean.login}" styleClass="btn btn-success" ></p:commandButton>
+        <!-- Override body -->
+        <ui:define name="body">
+            <!-- Background img -->
+            <h:panelGroup layout="block" class="bg-img">
+                <div class="wrapper">
+                    <!-- Navigation Bar -->
+                    <ui:insert name="nav" >
+                        <div class="login-nav">
+                        <ui:include src="/templates/snippets/navigation.xhtml" />
                         </div>
+                    </ui:insert>
+                    <!-- Content -->
+                    <div class="container">
+                        <ui:insert name="content">
+                            <h:form>
+                                <!-- login form -->
+                                <div class="row">
+                                    <div class="col-md-4 login-box">
+                                        <h2>Login</h2>
+                                        <div class="input-group form-control-spacing">
+                                            <div class="input-group-addon input-addon-fixedwidth">Username</div>
+                                            <h:inputText id="usernameInput" value="#{loginBean.username}" styleClass="form-control" pt:placeholder="Enter your username">
+                                                <f:validateLength minimum="4" maximum="32" />
+                                            </h:inputText>
+                                            <h:message styleClass="errorMsg" for="usernameInput" />
+                                        </div>
+
+                                        <div class="input-group form-control-spacing">
+                                            <div class="input-group-addon input-addon-fixedwidth">Password</div>
+                                            <h:inputSecret id="passwordInput" value="#{loginBean.password}" styleClass="form-control" pt:placeholder="Enter your password" />
+                                        </div>
+                                        <h:link value="Forget your password?" outcome="/resetpassword.xhtml" />
+                                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
+                                        <p:commandButton value="Login" id="ajax" actionListener="#{loginBean.login}" styleClass="btn btn-success" ></p:commandButton>
+                                    </div>
+                                </div>
+                            </h:form>
+                            <div class="push"></div>
+                        </ui:insert>
                     </div>
                 </div>
-            </h:form>
+                <!-- Footer -->
+                <ui:insert name="footer" >
+                    <ui:include src="/templates/snippets/footer.xhtml" />
+                </ui:insert>
+            </h:panelGroup>
         </ui:define>
 
     </ui:composition>
