--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -28,8 +28,10 @@
                     <p:menu>
                         <p:submenu label =" Manage Your Warehouse">
                 <p:menuitem value="WMS" url="wmsindex.xhtml" />
-                <p:menuitem value="Add a Warehouse" url="addnewwarehouse.xhtml" />
-                <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                <p:submenu label="Warehouse" >
+                    <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                    <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
+                </p:submenu>
                         </p:submenu>
                     </p:menu>
 
