--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -62,7 +62,7 @@
                                 <h:outputText value="#{user.lastName}" />
                             </p:column>
                             <p:column filterBy="#{user.emailAddress}" headerText="Email Address"  filterMatchMode="contains">
-                                <h:outputText value="#{user.emailAddress}" />
+                                <h:outputText value="#{user.emailAddress}"/>
                             </p:column>
                             <p:column filterBy="#{user.postalAddress}" headerText="Postal Address"  filterMatchMode="contains">
                                 <h:outputText value="#{user.postalAddress}" />
@@ -105,7 +105,9 @@
                                                 </p:inplace> 
                                                 <h:outputText value="Email Address" />
                                                 <p:inplace  editor="true">
-                                                    <p:inputText value="#{viewUserManagerBean.selectedUser.emailAddress}" required="true" label="text" />
+                                                    <p:inputText value="#{viewUserManagerBean.selectedUser.emailAddress}" required="true" label="text">
+                                                        <f:validator validatorId="custom.emailValidator" />
+                                                    </p:inputText>
                                                 </p:inplace> 
                                                 <h:outputText value="Password" />
                                                 <p:inplace  editor="true">
@@ -190,6 +192,20 @@
                         function hideAddRoleList() {
                             $("#addRolePanel").hide();
                         }
+                    </script>
+                    <script type="text/javascript">
+                        PrimeFaces.validator['custom.emailValidator'] = {
+                            pattern: /\S+@\S+/,
+                            validate: function(element, value) {
+                                //use element.data() to access validation metadata, in this case there is none.
+                                if (!this.pattern.test(value)) {
+                                    throw {
+                                        summary: 'Validation Error',
+                                        detail: value + ' is not a valid email.'
+                                    }
+                                }
+                            }
+                        };
                     </script>
                 </p:panel>
             </div>
