--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -26,7 +26,7 @@
                     <!-- Navigation Bar -->
                     <ui:insert name="nav" >
                         <div class="login-nav">
-                        <ui:include src="/templates/snippets/navigation.xhtml" />
+                            <ui:include src="/templates/snippets/navigation.xhtml" />
                         </div>
                     </ui:insert>
                     <!-- Content -->
@@ -40,7 +40,7 @@
                                         <div class="input-group form-control-spacing">
                                             <div class="input-group-addon input-addon-fixedwidth">Username</div>
                                             <h:inputText id="usernameInput" value="#{loginBean.username}" styleClass="form-control" pt:placeholder="Enter your username">
-                                                <f:validateLength minimum="4" maximum="32" />
+                                                <f:validator validatorId="custom.emailValidator" />
                                             </h:inputText>
                                             <h:message styleClass="errorMsg" for="usernameInput" />
                                         </div>
@@ -64,6 +64,20 @@
                     <ui:include src="/templates/snippets/footer.xhtml" />
                 </ui:insert>
             </h:panelGroup>
+            <script type="text/javascript">
+                PrimeFaces.validator['custom.emailValidator'] = {
+                    pattern: /\S+@\S+/,
+                    validate: function(element, value) {
+                        //use element.data() to access validation metadata, in this case there is none.
+                        if (!this.pattern.test(value)) {
+                            throw {
+                                summary: 'Validation Error',
+                                detail: value + ' is not a valid email.'
+                            }
+                        }
+                    }
+                };
+            </script>
         </ui:define>
 
     </ui:composition>
