--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -14,9 +14,7 @@
         <ui:define name="content">
             <h:form>
                 <div class="container" >
-
                     <h2>Create New User</h2>
-
                     <p:panel id="createuser" header="Create User" style="margin-bottom:10px;" >
                         <p:ajaxStatus style="width:16px;height:16px;">
                             <f:facet name="start">
@@ -26,20 +24,27 @@
                                 <h:outputText value="" />
                             </f:facet>
                         </p:ajaxStatus>
-                        <c:if test ="#{createUserManagerBean.loginedUser.userType == 'superuser'}">
 
-                            <h:panelGrid columns="1" cellpadding="5">
+
+                        <div class="col-md-2">
+                            <img id="loadingImg" src="img/load.gif" class="loader hide" />
+                        </div>
+
+
+                        <c:if test ="#{createUserManagerBean.loginedUser.userType == 'superuser'}">
+                            <h:panelGrid columns="4" cellpadding="6">
                                 <p:outputLabel for="company" value="Company:  " />
                                 <h:selectOneMenu required="true" requiredMessage="Please select the company" id="company" value="#{createUserManagerBean.selectCompanyId}" styleClass="form-control">
                                     <p:ajax listener="#{createUserManagerBean.onCompanyChange}" update="roles" />
                                     <f:selectItem itemLabel="Select Company . . ." itemValue="" noSelectionOption="true" />
                                     <f:selectItems value="#{createUserManagerBean.companys}" var="company" itemLabel="#{company.name}"  itemValue="#{company.companyId}"/>
                                 </h:selectOneMenu>
-
                             </h:panelGrid>
+                            <p:separator />
+
                         </c:if>
-                        <br/>
-                        <h:panelGrid columns="4" cellpadding="5">
+                        <h:panelGrid columns="4" cellpadding="6">
+
                             <p:outputLabel style="font-weight: bold"  value="Salutation * : "/>
                             <h:inputText required="true" requiredMessage="Salutation is required" value="#{createUserManagerBean.salution}" styleClass="form-control" />
 
@@ -64,6 +69,7 @@
                             <h:inputText required="true" requiredMessage="Contact Number is required" value="#{createUserManagerBean.contactNumber}" styleClass="form-control" />
 
 
+
                             <p:outputLabel value="Credit * :" style="font-weight: bold"/>
                             <h:selectOneMenu required="true" requiredMessage="Please select credit" id="credit" value="#{createUserManagerBean.credit}" styleClass="form-control">
                                 <f:selectItem itemLabel="Not Applicable" itemValue="Not Applicable" />
@@ -71,16 +77,12 @@
                                 <f:selectItem itemLabel="Fail" itemValue="Fail" />
                             </h:selectOneMenu>
 
-
-                            <p:outputLabel value="Select Roles * :" style="font-weight: bold" />
-                            <p:selectCheckboxMenu id="roles" value="#{createUserManagerBean.selectedRoles}" label="Roles"
-                                                  filter="true" filterMatchMode="startsWith" panelStyle="width:300px" styleClass="form-control" required="true" requiredMessage="Please select role">
+                            <p:outputLabel value="Select :" style="font-weight: bold" />
+                            <p:selectCheckboxMenu id="roles" value="#{createUserManagerBean.selectedRoles}"  label="roles" 
+                                                  filter="true" filterMatchMode="startsWith" panelStyle="width:300px" styleClass="form-control" requiredMessage="Please select role">
                                 <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
                             </p:selectCheckboxMenu>
                         </h:panelGrid>
-                        <div class="col-md-2">
-                            <img id="loadingImg" src="img/load.gif" class="loader hide" />
-                        </div>
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                         <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" update="createuser" styleClass="btn btn-success" icon="ui-icon-check"/>
                     </p:panel>
