--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -16,8 +16,8 @@
             <c:set var="root" value="${request.contextPath}" />
             <div class="container" >
                 <h2>View Roles</h2>
-                <p:panel header="View Roles" style="margin-bottom:10px;">
-                    <h:form>
+                <p:panel header="View Roles" style="margin-bottom:10px;" >
+                    <h:form id="roleform" >
                         <!--Only should company selection if it is super user-->
 
                         <c:if test ="#{viewCompanyRoles.loginedUser.userType == 'superuser'}">
@@ -34,12 +34,12 @@
                         <!--Display Role information accordingly-->
                         <p:contextMenu for="rolesData">
                             <p:menuitem value="View detail" update="roleDetail" icon="ui-icon-search" oncomplete="toggleModal();"/>
-                            <p:menuitem value="Delete" update="rolesData" icon="ui-icon-close" actionListener="#{viewCompanyRoles.deleteRole}"/>
+                            <p:menuitem value="Delete" update="rolesData" icon="ui-icon-close" oncomplete="deleteModal();" />
                         </p:contextMenu>
 
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
 
-                        <p:dataTable id="rolesData" var="role" rowKey="#{role.userRoleId}" value="#{viewCompanyRoles.roles}"
+                        <p:dataTable id="rolesData" var="role" rowKey="#{role.userRoleId}" value="#{viewCompanyRoles.roles}" 
                                      paginator="true"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      rowsPerPageTemplate="20,50,100"
@@ -192,7 +192,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <p:growl id="growl" showDetail="true" sticky="true" />
-                                        <p:commandButton value="Update" update="growl" styleClass="btn btn-success" actionListener="#{viewCompanyRoles.updateRole}"></p:commandButton>
+                                        <p:commandButton value="Update" update="growl" styleClass="btn btn-success"  actionListener="#{viewCompanyRoles.updateRole}"></p:commandButton>
                                         <p:commandButton value="Close" styleClass="btn btn-warning" pt:data-dismiss="modal"></p:commandButton>
                                     </div>
                                 </div>
@@ -200,9 +200,31 @@
 
                         </div>
                     </h:form>
+                    <h:form>
+                        <div id="deleteConfirm" class="modal fade">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h3>Delete Role</h3>
+                                    </div>
+                                    <div class="modal-body">
+                                        <h4>Are you sure you want to delete this role?</h4>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <p:commandButton value="Yes" styleClass="btn btn-success" update=":roleform:rolesData" actionListener="#{viewCompanyRoles.deleteRole}" pt:data-dismiss="modal"></p:commandButton>
+                                        <p:commandButton value="No" styleClass="btn btn-danger" pt:data-dismiss="modal"></p:commandButton>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </h:form>
                     <script type="text/javascript">
                         function toggleModal() {
                             $("#detailModal").modal('show');
+                        }
+                        function deleteModal() {
+                            $("#deleteConfirm").modal('show');
                         }
                     </script>
                 </p:panel>
